Final HW3 Submission

--- a/hw3/Makefile
+++ b/hw3/Makefile
@@ -1,16 +1,10 @@
-# You can add on to this file but you are not allowed to change the setup
-# provided below or the location of this file. If you do, you will fail
-# the auto-graded tests and likely receive a harsh penalty.
-
-CXX = g++
-CPPFLAGS = -g -Wall -std=c++11
-
-all: doublet 
+compiler = g++
+flags = -g -Wall -std=c++11
+compile = $(compiler) $(flags)
 
 doublet: doublet.cpp MinHeap.h
-	$(CXX) $(CPPFLAGS) $^ -o $@
+	$(compile) doublet.cpp MinHeap.h -o doublet
 
-# ADD WHATEVER ELSE YOU NEED HERE
 .PHONY: clean
 clean:
-	rm -f *.o doublet
+	rm -rf *.o doublet
